--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,21 @@ body.chat-open #openChatBtn {
   width: 115%;
 }
 
+.click-product {
+  position: relative;
+  text-align: center;
+}
+.click-product a{
+  font-size: 1.2rem;
+  cursor: pointer;
+  text-decoration: none;
+  color: white;
+  transition: 200ms;
+}
+.click-product:hover{
+  scale: 1.1;
+}
+
 #menu-icon {
   font-size: 3.6rem;
   color: var(--text-color);
