--- a/p/s/s/assets/css/valorant.css
+++ b/p/s/s/assets/css/valorant.css
@@ -12,7 +12,7 @@
 body {
     background-color: azure;
     font-family: 'Poppins';
-    background-image: url(/_vyse__valorant_animated_wallpaper_by_favorisxp_di3mb61-pre.jpg);
+    background-image: url('https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/d96bb958-4e6c-4ce0-9447-fbe226fbbecf/di3mb61-f482165d-d328-4838-9cd7-253dcd425fea.jpg/v1/fill/w_1192,h_670,q_70,strp/_vyse__valorant_animated_wallpaper_by_favorisxp_di3mb61-pre.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     scroll-behavior: smooth;
