--- a/p/s/s/assets/css/hok.css
+++ b/p/s/s/assets/css/hok.css
@@ -14,7 +14,7 @@ body {
     font-family: 'Poppins';
     background-image: url('/p/s/reg/hok1.jfif');
     background-repeat: no-repeat;
-    background-size: cover;
+    /*background-size: cover;*/
     scroll-behavior: smooth;
 }
 
