--- a/p/s/s/assets/css/admin.css
+++ b/p/s/s/assets/css/admin.css
@@ -161,7 +161,6 @@ textarea {
 }
 
 #image-manager {
-    border: 2px solid red;
     width: 90%;
     position: absolute;
     top: 50%;
@@ -170,6 +169,7 @@ textarea {
     justify-content: center;
     align-items: center;
     text-align: center;
+    box-shadow: 2px 2px 5px rgba(12, 12, 90, 0.3);
     border-radius: 5px;
     background: rgb(239, 238, 247);
 }
