Final Update IT 2024

--- a/anim.css
+++ b/anim.css
@@ -250,3 +250,90 @@ div [id ^= "loader-"] img{
 		opacity: 0;
 	}
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.spinner {
+    width: 44.8px;
+    height: 44.8px;
+    animation: spinner-y0fdc1 2s infinite ease;
+    transform-style: preserve-3d;
+    z-index: 999;
+ }
+
+.spinner-wrapper{
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(133deg, #010101 0%, #131410 54%, #1d1d03 100%);
+	z-index: 999;
+}
+ 
+ .spinner > div {
+    background-color: rgba(185,255,128,0.2);
+    height: 100%;
+    position: absolute;
+    width: 100%;
+    border: 2.2px solid rgba(185, 255, 128, 0.45);
+ }
+ 
+ .spinner div:nth-of-type(1) {
+    transform: translateZ(-22.4px) rotateY(180deg);
+ }
+ 
+ .spinner div:nth-of-type(2) {
+    transform: rotateY(-270deg) translateX(50%);
+    transform-origin: top right;
+ }
+ 
+ .spinner div:nth-of-type(3) {
+    transform: rotateY(270deg) translateX(-50%);
+    transform-origin: center left;
+ }
+ 
+ .spinner div:nth-of-type(4) {
+    transform: rotateX(90deg) translateY(-50%);
+    transform-origin: top center;
+ }
+ 
+ .spinner div:nth-of-type(5) {
+    transform: rotateX(-90deg) translateY(50%);
+    transform-origin: bottom center;
+ }
+ 
+ .spinner div:nth-of-type(6) {
+    transform: translateZ(22.4px);
+ }
+ 
+ @keyframes spinner-y0fdc1 {
+    0% {
+       transform: rotate(45deg) rotateX(-25deg) rotateY(25deg);
+    }
+ 
+    50% {
+       transform: rotate(45deg) rotateX(-385deg) rotateY(25deg);
+    }
+ 
+    100% {
+       transform: rotate(45deg) rotateX(-385deg) rotateY(385deg);
+    }
+ }
