--- a/p/s/s/assets/css/admin.css
+++ b/p/s/s/assets/css/admin.css
@@ -3,6 +3,65 @@
 
 body {
     font-family: 'Poppins';
+    -webkit-tap-highlight-color: transparent;
+    text-decoration: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 36px;
+    height: 20px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: 200ms;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 13px;
+    width: 13px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: 200ms;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #64ec6f;
+}
+
+input[type=checkbox] {
+    display: none;
+}
+
+input:checked + .slider:before {
+    transform: translateX(15px);
+}
+
+.game-checkbox {
+    margin: 20px 0;
 }
 
 canvas {
@@ -13,7 +72,19 @@ canvas {
 }
 .active {
     display: block; /* Show only active content */
+    animation: fadeIn 200ms ease-in-out 0s 1 normal forwards;
 }
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
+	}
+}
+
 .toggle-button {
     margin: 10px;
     padding: 10px 20px;
@@ -27,6 +98,8 @@ canvas {
     box-shadow: 2px 2px 5px rgba(12, 12, 90, 0.3),
     -2px -2px 5px rgba(12, 12, 90, 0.3);
 }
+
+
 
 main button {
     cursor: pointer;
@@ -64,6 +137,7 @@ textarea {
     border-radius: 5px;
     box-shadow: 2px 2px 5px rgba(12, 12, 90, 0.3);
 }
+
 #registration-details-input {
     font-family: 'Poppins';
     width: 60%;
@@ -125,14 +199,14 @@ textarea {
   }
 
 
-.image-grid {
+.image-grid, .image-grid-merch {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 0rem;
     margin: 3%;
 }
 
-.image-grid img {
+.image-grid img, .image-grid-merch img {
     border-radius: 5px;
     width: 100%;
     height: auto;
@@ -142,7 +216,7 @@ textarea {
     box-shadow: 2px 2px 5px rgba(12, 12, 90, 0.3);
 }
 
-.image-grid img.selected {
+.image-grid img.selected, .image-grid-merch img.selected {
     border-color: red;
     filter: opacity(0.5);
 }
@@ -186,6 +260,11 @@ button:hover {
     background-color: #ccc;
 }
 
+.btn-close {
+    float: right;
+    margin: 2%;
+}
+
 .maincontent {
     margin: 3%;
 }
@@ -193,4 +272,14 @@ button:hover {
     margin-bottom: 3px;
     text-align: center;
     color: #52466e;
+}
+
+
+.content3 {
+    border-radius: 5px;
+    margin: 3%;
+    padding: 3%;
+    background: rgb(239, 238, 247);
+    box-shadow: 2px 2px 5px rgba(12, 12, 90, 0.3),
+    -2px -2px 5px rgba(12, 12, 90, 0.3);
 }
