--- a/p/s/s/assets/css/style.css
+++ b/p/s/s/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 10px;
     background-color: rgb(207, 212, 216);
+    -webkit-tap-highlight-color: transparent;
   }
 
   .login-wrapper {
